# MVPs

./: README.md  auto_generate_mvps_docs_safe.py  merge_clean_readmes.py
CosmoX/: README.md  debug-routing.html  package-lock.json  package.json  replit.md
CosmoX/client/: index.html
CosmoX/server/: gemini.ts  routes.ts  storage.ts
CosmoX/shared/: schema.ts
DoIt-Do1t-OneTask-Task-Manager/: .env.example  .gitignore  COLOR-GUIDE.md  README.md  README2.md  package-lock.json  package.json
DoIt-Do1t-OneTask-Task-Manager/attached_assets/: Pasted-Here-s-a-prompt-you-can-give-to-Replit-s-AI-Agent-to-fix-the-Invalid-task-data-error-related-t-1746638570901.txt
DoIt-Do1t-OneTask-Task-Manager/client/: index.html
DoIt-Do1t-OneTask-Task-Manager/server/: seed.ts  (+3 more)
FunnelUp-CV/: .replit  README.md  main.py  models.py  pyproject.toml  replit.md
FunnelUp-CV/attached_assets/: Pasted-Sandor-Kardos-Designer-Developer-Digital-Content-Creator-Edinburgh-Scotland-UK-email-kardo-1745453710001.txt  humanizer.txt
FunnelUp-CV/static/css/: main.css
FunnelUp-CV/templates/: chat-funnel.html  funnel.html  index.html
Milestones-UX-UI-Design/: .replit  README.md  index.html  package-lock.json  package.json  replit.md  script.js  style.css  test-embed.html  timeline-embed.html  wordpress-embed.html  wordpress-final.html  wordpress-fixed.html  wordpress-minified.html  wordpress-working.html
TipsyMeter/: .env.example  .gitignore  README.md  README2.md  package-lock.json  package.json  replit.md
WhatSoup/: .env.example  README.md  README2.md  package-lock.json  package.json  theme.json
(+95 files in other folders)
